Fix more layout issues

--- a/app/components/info/Info.module.scss
+++ b/app/components/info/Info.module.scss
@@ -8,7 +8,9 @@
     align-items: center;
     justify-content: center;
     margin: 0;
-    flex-grow: 1;
+    height: 100vh;
+    // flex-grow: 1;
+
 
     .infoGrid {
         display: grid;
