--- a/app/components/sections/education/Education.module.scss
+++ b/app/components/sections/education/Education.module.scss
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
+    // flex-grow: 1;
 
     .gridContainer {
         display: flex;
