--- a/app/components/sections/skills/Skills.module.scss
+++ b/app/components/sections/skills/Skills.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 
     .skillsGridContainer {
         padding-top: 2rem;
