--- a/app/components/sections/work-experience/WorkExperience.module.scss
+++ b/app/components/sections/work-experience/WorkExperience.module.scss
@@ -6,6 +6,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
+    // flex-grow: 1;
+
 
     .flexGrid {
         display: flex;
